# movie-backend

./: .gitignore  README.md  rappel_poo.py  requirements.txt
api/: .dockerignore  README.md  database.py  requirements.txt  test_models.py  test_query_helpers.py
sdk/: README.md  pyproject.toml  test_sdk.py
