[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdkForMovies"
version = "0.0.2"
authors = [
  { name="[Saiba Saw]" },
]
description = "SDK Python pour accéder à l’API MovieLens (Data Analysts/Data Scientists friendly)"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
       'httpx>=0.28.1',
       'pydantic>=2.11.3',
       'backoff>=2.2.1',
       'numpy>=2.2.4',
       'pandas>=2.2.3',
       'python-dotenv',
]